@@ -16,10 +16,13 @@
 package io.streamthoughts.jikkou.kafka.connect.change;
 
 import io.streamthoughts.jikkou.common.utils.AsyncUtils;
-import io.streamthoughts.jikkou.core.models.DefaultResourceChange;
-import io.streamthoughts.jikkou.core.reconcilier.ChangeResponse;
-import io.streamthoughts.jikkou.core.reconcilier.ChangeType;
-import io.streamthoughts.jikkou.core.reconcilier.change.ValueChange;
+import io.streamthoughts.jikkou.core.models.ObjectMeta;
+import io.streamthoughts.jikkou.core.models.change.GenericResourceChange;
+import io.streamthoughts.jikkou.core.models.change.ResourceChange;
+import io.streamthoughts.jikkou.core.models.change.ResourceChangeSpec;
+import io.streamthoughts.jikkou.core.models.change.StateChange;
+import io.streamthoughts.jikkou.core.reconciler.ChangeResponse;
+import io.streamthoughts.jikkou.core.reconciler.Operation;
 import io.streamthoughts.jikkou.kafka.connect.api.KafkaConnectApi;
 import io.streamthoughts.jikkou.kafka.connect.models.KafkaConnectorState;
 import java.util.List;
@@ -29,114 +32,155 @@ import org.mockito.Mockito;
 
 class KafkaConnectorChangeHandlerTest {
 
+    public static final String TEST_CONNECTOR_NAME = "test";
 
     @Test
     void shouldUpdateConfigForAddChange() {
         KafkaConnectApi mkKafkaConnectApi = Mockito.mock(KafkaConnectApi.class);
-        KafkaConnectorChangeHandler handler = new KafkaConnectorChangeHandler(mkKafkaConnectApi, "test");
+        KafkaConnectorChangeHandler handler = new KafkaConnectorChangeHandler(mkKafkaConnectApi, TEST_CONNECTOR_NAME);
 
-        KafkaConnectorChange change = new KafkaConnectorChange(
-                ChangeType.ADD,
-                "test",
-                ValueChange.withAfterValue("???"),
-                ValueChange.withAfterValue(1),
-                ValueChange.withAfterValue(KafkaConnectorState.RUNNING),
-                List.of()
-        );
+        ResourceChange change = GenericResourceChange
+                .builder()
+                .withMetadata(ObjectMeta
+                        .builder()
+                        .withName(TEST_CONNECTOR_NAME)
+                        .build()
+                )
+                .withSpec(ResourceChangeSpec
+                        .builder()
+                        .withOperation(Operation.CREATE)
+                        .withChange(StateChange.create("connectorClass", "???"))
+                        .withChange(StateChange.create("tasksMax", 1))
+                        .withChange(StateChange.create("state", KafkaConnectorState.RUNNING))
+                        .build()
+                )
+                .build();
 
-        List<ChangeResponse<KafkaConnectorChange>> results = handler.apply(List.of(new DefaultResourceChange<>(change)));
+        List<ChangeResponse<ResourceChange>> results = handler.handleChanges(List.of(change));
         Assertions.assertEquals(1, results.size());
 
-        AsyncUtils.getValue(results.get(0).getResults());
+        AsyncUtils.getValue(results.getFirst().getResults());
         Mockito.verify(mkKafkaConnectApi, Mockito.times(1))
-               .createOrUpdateConnector(Mockito.eq("test"), Mockito.anyMap());
+                .createOrUpdateConnector(Mockito.eq(TEST_CONNECTOR_NAME), Mockito.anyMap());
     }
 
     @Test
     void shouldDeleteConnectorForDeleteChange() {
         KafkaConnectApi mkKafkaConnectApi = Mockito.mock(KafkaConnectApi.class);
-        KafkaConnectorChangeHandler handler = new KafkaConnectorChangeHandler(mkKafkaConnectApi, "test");
+        KafkaConnectorChangeHandler handler = new KafkaConnectorChangeHandler(mkKafkaConnectApi, TEST_CONNECTOR_NAME);
 
-        KafkaConnectorChange change = new KafkaConnectorChange(
-                ChangeType.DELETE,
-                "test",
-                ValueChange.withBeforeValue("???"),
-                ValueChange.withBeforeValue(1),
-                ValueChange.withBeforeValue(KafkaConnectorState.RUNNING),
-                List.of()
-        );
+        ResourceChange change = GenericResourceChange
+                .builder()
+                .withMetadata(ObjectMeta
+                        .builder()
+                        .withName(TEST_CONNECTOR_NAME)
+                        .build()
+                )
+                .withSpec(ResourceChangeSpec
+                        .builder()
+                        .withOperation(Operation.DELETE)
+                        .withChange(StateChange.delete("connectorClass", "???"))
+                        .withChange(StateChange.delete("tasksMax", 1))
+                        .withChange(StateChange.delete("state", KafkaConnectorState.RUNNING))
+                        .build()
+                )
+                .build();
 
-        List<ChangeResponse<KafkaConnectorChange>> results = handler.apply(List.of(new DefaultResourceChange<>(change)));
+        List<ChangeResponse<ResourceChange>> results = handler.handleChanges(List.of(change));
         Assertions.assertEquals(1, results.size());
 
-        AsyncUtils.getValue(results.get(0).getResults());
+        AsyncUtils.getValue(results.getFirst().getResults());
         Mockito.verify(mkKafkaConnectApi, Mockito.times(1))
-                .deleteConnector(Mockito.eq("test"));
+                .deleteConnector(Mockito.eq(TEST_CONNECTOR_NAME));
     }
 
     @Test
     void shouldPauseConnectorForPausedStageOnlyChange() {
         KafkaConnectApi mkKafkaConnectApi = Mockito.mock(KafkaConnectApi.class);
-        KafkaConnectorChangeHandler handler = new KafkaConnectorChangeHandler(mkKafkaConnectApi, "test");
+        KafkaConnectorChangeHandler handler = new KafkaConnectorChangeHandler(mkKafkaConnectApi, TEST_CONNECTOR_NAME);
 
-        KafkaConnectorChange change = new KafkaConnectorChange(
-                ChangeType.UPDATE,
-                "test",
-                ValueChange.none("???"),
-                ValueChange.none(1),
-                ValueChange.withAfterValue(KafkaConnectorState.PAUSED),
-                List.of()
-        );
+        ResourceChange change = GenericResourceChange
+                .builder()
+                .withMetadata(ObjectMeta
+                        .builder()
+                        .withName(TEST_CONNECTOR_NAME)
+                        .build()
+                )
+                .withSpec(ResourceChangeSpec
+                        .builder()
+                        .withOperation(Operation.UPDATE)
+                        .withChange(StateChange.none("connectorClass", "???"))
+                        .withChange(StateChange.none("tasksMax", 1))
+                        .withChange(StateChange.with("state", null, KafkaConnectorState.PAUSED))
+                        .build()
+                )
+                .build();
 
-        List<ChangeResponse<KafkaConnectorChange>> results = handler.apply(List.of(new DefaultResourceChange<>(change)));
+        List<ChangeResponse<ResourceChange>> results = handler.handleChanges(List.of(change));
         Assertions.assertEquals(1, results.size());
 
-        AsyncUtils.getValue(results.get(0).getResults());
+        AsyncUtils.getValue(results.getFirst().getResults());
         Mockito.verify(mkKafkaConnectApi, Mockito.times(1))
-                .pauseConnector(Mockito.eq("test"));
+                .pauseConnector(Mockito.eq(TEST_CONNECTOR_NAME));
     }
 
     @Test
     void shouldResumeConnectorForRunningStateOnlyChange() {
         KafkaConnectApi mkKafkaConnectApi = Mockito.mock(KafkaConnectApi.class);
-        KafkaConnectorChangeHandler handler = new KafkaConnectorChangeHandler(mkKafkaConnectApi, "test");
+        KafkaConnectorChangeHandler handler = new KafkaConnectorChangeHandler(mkKafkaConnectApi, TEST_CONNECTOR_NAME);
 
-        KafkaConnectorChange change = new KafkaConnectorChange(
-                ChangeType.UPDATE,
-                "test",
-                ValueChange.none("???"),
-                ValueChange.none(1),
-                ValueChange.withAfterValue(KafkaConnectorState.RUNNING),
-                List.of()
-        );
+        ResourceChange change = GenericResourceChange
+                .builder()
+                .withMetadata(ObjectMeta
+                        .builder()
+                        .withName(TEST_CONNECTOR_NAME)
+                        .build()
+                )
+                .withSpec(ResourceChangeSpec
+                        .builder()
+                        .withOperation(Operation.UPDATE)
+                        .withChange(StateChange.none("connectorClass", "???"))
+                        .withChange(StateChange.none("tasksMax", 1))
+                        .withChange(StateChange.create("state", KafkaConnectorState.RUNNING))
+                        .build()
+                )
+                .build();
 
-        List<ChangeResponse<KafkaConnectorChange>> results = handler.apply(List.of(new DefaultResourceChange<>(change)));
+        List<ChangeResponse<ResourceChange>> results = handler.handleChanges(List.of(change));
         Assertions.assertEquals(1, results.size());
 
-        AsyncUtils.getValue(results.get(0).getResults());
+        AsyncUtils.getValue(results.getFirst().getResults());
         Mockito.verify(mkKafkaConnectApi, Mockito.times(1))
-                .resumeConnector(Mockito.eq("test"));
+                .resumeConnector(Mockito.eq(TEST_CONNECTOR_NAME));
     }
 
     @Test
     void shouldStopConnectorForStoppedStateOnlyChange() {
         KafkaConnectApi mkKafkaConnectApi = Mockito.mock(KafkaConnectApi.class);
-        KafkaConnectorChangeHandler handler = new KafkaConnectorChangeHandler(mkKafkaConnectApi, "test");
+        KafkaConnectorChangeHandler handler = new KafkaConnectorChangeHandler(mkKafkaConnectApi, TEST_CONNECTOR_NAME);
 
-        KafkaConnectorChange change = new KafkaConnectorChange(
-                ChangeType.UPDATE,
-                "test",
-                ValueChange.none("???"),
-                ValueChange.none(1),
-                ValueChange.withAfterValue(KafkaConnectorState.STOPPED),
-                List.of()
-        );
+        ResourceChange change = GenericResourceChange
+                .builder()
+                .withMetadata(ObjectMeta
+                        .builder()
+                        .withName(TEST_CONNECTOR_NAME)
+                        .build()
+                )
+                .withSpec(ResourceChangeSpec
+                        .builder()
+                        .withOperation(Operation.UPDATE)
+                        .withChange(StateChange.none("connectorClass", "???"))
+                        .withChange(StateChange.none("tasksMax", 1))
+                        .withChange(StateChange.create("state", KafkaConnectorState.STOPPED))
+                        .build()
+                )
+                .build();
 
-        List<ChangeResponse<KafkaConnectorChange>> results = handler.apply(List.of(new DefaultResourceChange<>(change)));
+        List<ChangeResponse<ResourceChange>> results = handler.handleChanges(List.of(change));
         Assertions.assertEquals(1, results.size());
 
-        AsyncUtils.getValue(results.get(0).getResults());
+        AsyncUtils.getValue(results.getFirst().getResults());
         Mockito.verify(mkKafkaConnectApi, Mockito.times(1))
-                .stopConnector(Mockito.eq("test"));
+                .stopConnector(Mockito.eq(TEST_CONNECTOR_NAME));
     }
 }
